--- a/todolist.html
+++ b/todolist.html
@@ -28,12 +28,12 @@
                 font-size: 32px;
                 margin-bottom: 20px;
             }
-search container {
+.search-container {
     display: flexbox;
     justify-content: center;
     margin: 5px;
 }
-search-button {
+.search-button {
     background-color: orange;
     color: white;
     border: none;
@@ -42,7 +42,7 @@ search-button {
 margin-left: 8px;
 cursor: pointer;
 }
-task-list {
+.task-list {
     list-style-type: circle;
     padding: auto;
 }
@@ -54,6 +54,36 @@ li {
 border-bottom: 0px solid white;
 background-color: white;
 }
-        </style>
-    </body>
+.task-text {
+    margin-left: 10px;
+    text-align: center;
+}
+.completed {
+    text-decoration: line-through;
+}
+.edit-button, .complete-button {
+            padding: 5px 10px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .complete-button {
+            background-color: #27ae60;
+        }
+        .edit-button {
+            background-color: #e67e22;
+            margin-right: 5px;
+        }
+        input[type="text"] {
+            width: 70%;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+          </style>
+    </head>
+</body>
 </html>
+
