--- a/todolist.html
+++ b/todolist.html
@@ -85,5 +85,34 @@ background-color: white;
           </style>
     </head>
 </body>
-</html>
+<div id="todo-container">
+    <h1>My Colorful Tasks</h1>
+    <div id="search-container">
+        <input type="text" id="search-bar" placeholder="Search your tasks...">
+        <button id="search-button">Search</button>
+    </div>
+    <ul id="task-list">
+        <li>
+            <input type="checkbox">
+            <span class="task-text">Example Task 1</span>
+            <button class="edit-button">Edit</button>
+            <button class="complete-button">Complete</button>
+        </li>
+        <li>
+            <input type="checkbox">
+            <span class="task-text">Example Task 2</span>
+            <button class="edit-button">Edit</button>
+            <button class="complete-button">Complete</button>
+        </li>
+    </ul>
+    <input type="text" id="new-task" placeholder="Add a new task...">
+        <button id="add-button">Add</button>
+    </div>
+    <script>
+        const addButton = document.getElementById('add-button');
+        const newTaskInput = document.getElementById('new-task');
+        const taskList = document.getElementById('task-list');
+        const searchButton = document.getElementById('search-button');
+        const searchBar = document.getElementById('search-bar');
+
 
