--- a/todolist.html
+++ b/todolist.html
@@ -1,162 +1,57 @@
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <title> Todo - List </title>
-    </head>
-    <body>
-        <style>
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-                background-color: aquamarine;
-                margin: 10px;
-                padding: 5px;
-                display: list-item;
-                justify-content: flex-start;
-                align-items: center;
-                min-height: auto;
-            }
-            todo container {
-                background-color: aliceblue;
-                padding: 15 px;
-                border-radius: 5 px;
-                text-align: center;
-                max-width: 300px;
-            }
-            h1 {
-                color: blueviolet;
-                font-size: 32px;
-                margin-bottom: 20px;
-            }
-.search-container {
-    display: flexbox;
-    justify-content: center;
-    margin: 5px;
-}
-.search-button {
-    background-color: orange;
+html>
+<head>
+<title>TODO List</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #cdd5ff;
+  }
+  #main_div {
+    width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: rgb(205, 248, 255);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  }
+  input[type="text"] {
+    width: 100%;
+    padding: 4px;
+    margin-bottom: 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+  }
+  button {
+    background-color: #a34caf;
     color: white;
     border: none;
-    border-radius: 5pc;
-    padding: 7.5px;
-margin-left: 8px;
-cursor: pointer;
-}
-.task-list {
-    list-style-type: circle;
-    padding: auto;
-}
-li {
+    border-radius: 4px;
+    padding: 8px 12px;
+    cursor: pointer;
+  }
+  button.edit {
+    cursor:pointer;
+    background-color: #3407ff;
+  }
+  button.complete {
+    background-color: #3af321;
+  }
+  ul {
+    list-style-type: none;
+    padding: 3px;
+  }
+  li {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
     display: flex;
     align-items: center;
-    justify-content: auto;
-    padding: 10px;
-border-bottom: 0px solid white;
-background-color: white;
-}
-.task-text {
-    margin-left: 10px;
-    text-align: center;
-}
-.completed {
+    justify-content: space-between;
+  }
+  li.completed {
     text-decoration: line-through;
-}
-.edit-button, .complete-button {
-            padding: 5px 10px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .complete-button {
-            background-color: #27ae60;
-        }
-        .edit-button {
-            background-color: #e67e22;
-            margin-right: 5px;
-        }
-        input[type="text"] {
-            width: 70%;
-            padding: 5px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-          </style>
-    </head>
-</body>
-<div id="todo-container">
-    <h1>My Colorful Tasks</h1>
-    <div id="search-container">
-        <input type="text" id="search-bar" placeholder="Search your tasks...">
-        <button id="search-button">Search</button>
-    </div>
-    <ul id="task-list">
-        <li>
-            <input type="checkbox">
-            <span class="task-text">Example Task 1</span>
-            <button class="edit-button">Edit</button>
-            <button class="complete-button">Complete</button>
-        </li>
-        <li>
-            <input type="checkbox">
-            <span class="task-text">Example Task 2</span>
-            <button class="edit-button">Edit</button>
-            <button class="complete-button">Complete</button>
-        </li>
-    </ul>
-    <input type="text" id="new-task" placeholder="Add a new task...">
-        <button id="add-button">Add</button>
-    </div>
-    <script>
-        const addButton = document.getElementById('add-button');
-        const newTaskInput = document.getElementById('new-task');
-        const taskList = document.getElementById('task-list');
-        const searchButton = document.getElementById('search-button');
-        const searchBar = document.getElementById('search-bar');
-        addButton.addEventListener('click', () => {
-            const newTaskText = newTaskInput.value.trim();
-            if (newTaskText !== '') {
-                const newTaskItem = document.createElement('li');
-                newTaskItem.innerHTML = `
-                    <input type="checkbox">
-                    <span class="task-text">${newTaskText}</span>
-                    <button class="edit-button">Edit</button>
-                    <button class="complete-button">Complete</button>
-                `;
-                taskList.appendChild(newTaskItem);
-                newTaskInput.value = '';
-            }
-        });
-
-        searchButton.addEventListener('click', () => {
-            const searchTerm = searchBar.value.trim().toLowerCase();
-            const tasks = taskList.getElementsByTagName('li');
-
-            for (const task of tasks) {
-                const taskText = task.querySelector('.task-text').textContent.toLowerCase();
-                if (taskText.includes(searchTerm)) {
-                    task.style.display = 'flex';
-                } else {
-                    task.style.display = 'none';
-                }
-            }
-        });
-
-        taskList.addEventListener('click', (event) => {
-            const clickedElement = event.target;
-            if (clickedElement.className === 'edit-button') {
-                const taskText = clickedElement.parentElement.querySelector('.task-text');
-                const newText = prompt('Edit task:', taskText.textContent);
-                if (newText !== null) {
-                    taskText.textContent = newText;
-                }
-            } else if (clickedElement.className === 'complete-button') {
-                const taskText = clickedElement.parentElement.querySelector('.task-text');
-                taskText.classList.toggle('completed');
-            }
-        });
-    </script>
-</body>
-</html>
-
+    color: #777;
+  }
+</style>
+</head>
