--- a/todolist.html
+++ b/todolist.html
@@ -69,3 +69,18 @@ div id="main_div">
   const taskList = document.getElementById("taskList");
 
   addButton.addEventListener("click", addTask);
+
+  
+  function addTask() {
+    const taskText = taskInput.value.trim();
+    if (taskText !== "") {
+      const li = document.createElement("li");
+      li.innerHTML = `
+        <span>${taskText}</span>
+        <button class="edit">Edit</button>
+        <button class="complete">Complete</button>
+      `;
+      taskList.appendChild(li);
+      taskInput.value = "";
+    }
+  }
