--- a/todolist.html
+++ b/todolist.html
@@ -55,7 +55,8 @@
   }
 </style>
 </head>
-div id="main_div">
+<body>
+<div id="main_div">
   <h1>TODO List</h1>
   <input type="text" id="taskInput" placeholder="Enter a new task">
   <button id="addButton">Add Task</button>
@@ -70,7 +71,6 @@ div id="main_div">
 
   addButton.addEventListener("click", addTask);
 
-  
   function addTask() {
     const taskText = taskInput.value.trim();
     if (taskText !== "") {
@@ -84,6 +84,8 @@ div id="main_div">
       taskInput.value = "";
     }
   }
+
+  /* When the user clicks on the edit button, we disable the button */
   taskList.addEventListener("click", event => {
     const target = event.target;
     if (target.classList.contains("edit")) {
