--- a/todolist.html
+++ b/todolist.html
@@ -85,16 +85,36 @@
     }
   }
 
-  /* When the user clicks on the edit button, we disable the button */
   taskList.addEventListener("click", event => {
-    const target = event.target;
-    if (target.classList.contains("edit")) {
-      target.classList.add("enabled");
-    } else if (target.classList.contains("complete")) {
-      const li = target.parentElement;
-      li.classList.toggle("completed");
-    }
+  const target = event.target;
+  if (target.classList.contains("edit")) {
+    const li = target.parentElement;
+    const span = li.querySelector("span");
+
+    const input = document.createElement("input");
+    input.type = "text";
+    input.value = span.textContent;
+
+    const saveButton = document.createElement("button");
+    saveButton.textContent = "Save";
+    saveButton.classList.add("edit");
+
+    saveButton.addEventListener("click", () => {
+      span.textContent = input.value;
+      li.removeChild(input);
+      li.removeChild(saveButton);
+      target.classList.remove("enabled");
+    });
+
+    li.insertBefore(input, span);
+    li.insertBefore(saveButton, span);
+    target.classList.add("enabled");
+  } else if (target.classList.contains("complete")) {
+    const li = target.parentElement;
+    li.classList.toggle("completed");
+  }
 });
+
 </script>
 </body>
 </html>
